ora il numero si evidenzia

--- a/tombola.html
+++ b/tombola.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <header>
-        <h1 id="tabellone"></h1>
+        <h1 class="tabello" id="tabellone"></h1>
     </header>
     <main>
+        <div id="container"></div>
         <button onclick="estraiNumero()">Estrai</button>
         <p>numero-estratto: <span id="numero-estratto">-</span></p>
     </main>
